--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.klazapp.hierarchy",
-  "displayName": "Klazapp Hierarchy",
+  "displayName": "Unity Hierarchy",
   "version": "1.0.0",
   "unity": "2022.3",
   "description": "This custom Hierarchy tool changes the way developers interact with game objects within the hierarchy window.",
@@ -14,5 +14,14 @@
     "com.unity.mathematics": "1.2.6",
     "com.klazapp.logger": "1.0.0",
     "com.klazapp.editor.helper": "1.0.0"
-  }
+  },
+    "author": {
+    "name": "Klazapp",
+    "email": "klazapp@klazapp.com",
+    "url": "https://www.klazapp.com"
+  },
+    "documentationUrl": "https://github.com/klazapp/Unity-Hierarchy-Public",
+    "changelogUrl": "https://github.com/klazapp/Unity-Hierarchy-Public",
+    "licensesUrl": "https://github.com/klazapp/Unity-Hierarchy-Public"
 }
+
